--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <link rel="stylesheet" href="static/css/style.css">
 <link rel="stylesheet" href="static/css/style.css">
 </head>
-<body>
-  <body class="bg-dark">
+<body class="bg-dark">
     <div class="wrapper">
       <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
         <nav class="navbar navbar-expand-lg">
@@ -50,16 +49,17 @@
         <div class="container-fluid">
             <div class="row">
               <div class="col-md-3">
-                <form>
+                  <form class="bg-dark">
                   <p>Filter Search</p>
-                  <ul>
-                    <li>
+                    
+                  <ul class="list-group bg-dark">
+                    <li class = "list-group-item bg-dark">
                       <label for="date">Enter Date</label>
                       <input type="text" placeholder="1/10/2010" id="datetime" />
                     </li>
-                    <li>
-                       <button id="filter-btn" type="button" class="btn btn-default">
-                         Filter Table
+                    <li class = "list-group-item bg-dark">
+                      <button id="filter-btn" type="button" class="btn btn-dark">
+                      Filter Table
                        </button>
                     </li>
                   </ul>
