--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                     </li>
                     <li class = "list-group-item bg-dark">
                       <label for="city">Enter City</label>
-                      <input type="text" placeholder="boca raton" id="certainly" />
+                      <input type="text" placeholder="city" id="city" />
                     </li>
                     <li class = "list-group-item bg-dark">
                       <label for="state">Enter State</label>
-                      <input type="text" placeholder="fl" id="state" />
+                      <input type="text" placeholder="state" id="state" />
                     </li>
                     <li class = "list-group-item bg-dark">
                       <label for="country">Enter Country</label>
@@ -71,7 +71,7 @@
                     </li>
                     <li class = "list-group-item bg-dark">
                       <label for="shape">Enter Shape</label>
-                      <input type="text" placeholder="fireball" id="shape" />
+                      <input type="text" placeholder="shape" id="shape" />
                     </li>
                   </ul>
                  </form>
